tests/expectations/compiler/tuple/declare_fail.out
Error [ETYC0372117]: Expected type `bool` but type `u64` was found.
    --> compiler-test:3:35
     |
   3 |         let t: (bool, bool) = (a, 1u64); // We should be declaring to a bool, not a u64.
     |                                   ^^^^
